<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hci.hciassignment.activity.MainActivity"
    android:padding="@dimen/contact_layout_padding">


    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/contact_hint_first_name"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        android:hint="@string/contact_hint_last_name"
        android:layout_marginTop="32dp"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/contact_hint_phone_number"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contact_hint_email_address"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/editTextBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contact_hint_birth_date"
        android:inputType="date"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btnOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"/>

</LinearLayout>
